--- a/www/templates/tasks.html
+++ b/www/templates/tasks.html
@@ -10,7 +10,7 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="task in tasks">
-        {{task.title}}
+        {{task.name}}
       </ion-item>
     </ion-list>
   </ion-content>
